@@ -55,7 +55,8 @@ var CloudCommander, Util, DOM, CodeMirror;
             FM          = DOM.getFM();
         
         var lCSS        = setCSS(),
-            lPath       = DOM.getCurrentPath();
+            lCurrent    = DOM.getCurrentFile(),
+            lPath       = DOM.getCurrentPath( lCurrent );
         
         CodeMirrorElement = DOM.anyload({
             name        : 'div',
@@ -78,8 +79,11 @@ var CloudCommander, Util, DOM, CodeMirror;
                     Util.exec(pParams);
                     DOM.remove(lCSS, document.head);
                 },
-                 'Ctrl-S': function(){
-                    DOM.RESTfull.save(lPath,  lEditor.getValue());
+                'Ctrl-S': function(){
+                    var lValue = lEditor.getValue();
+                    
+                    DOM.setCurrentSize( lValue.length, lCurrent );
+                    DOM.RESTfull.save( lPath,  lValue );
                  }
             },
             readOnly    : ReadOnly
